[gd_scene load_steps=5 format=3 uid="uid://cx0433o6qvm41"]

[ext_resource type="PackedScene" uid="uid://ce578vgimeu1f" path="res://weapons/base_weapon.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://bef4phbs5larr" path="res://weapons/onion/onion.svg" id="2"]
[ext_resource type="Script" path="res://weapons/onion/Onion.gd" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 50.0

[node name="Onion" instance=ExtResource("1")]
script = ExtResource("3")
damage = 2.0
area = 80.0
cooldown = 0.25
impact = 100.0

[node name="ShootingTimer" parent="." index="0"]
one_shot = false

[node name="DamageArea" type="Area2D" parent="." index="2"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea" index="0"]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="." index="3"]
self_modulate = Color(1, 1, 1, 0.156863)
scale = Vector2(0.565, 0.565)
texture = ExtResource("2")

[node name="ItemComponent" parent="." index="4"]
item_name = "洋葱"
description = "对周围敌人持续造成伤害"
leveled_descriptions = Array[String](["对周围敌人持续造成伤害", "增加1点伤害", "增加20范围", "增加50击退", "增加2点伤害", "增加50击退", "增加50范围", "增加5点伤害"])

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
